Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerBoolObjField.quorum
class Main
    Boolean v
    action Main
        v:SetValue(true)
        Test(v)
    end

    action Test(integer var)
    end
end
